added animation visualizer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ pandas = "*"
 tqdm = "^4.61.2"
 more_itertools = "*"
 requests = "*"
+SumoNetVis = "*"
+moviepy = "*"
+joblib = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
