--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sumo_output_parsers"
-version = "0.50"
+version = "0.51"
 description = "Fast and lightweight file parsers for SUMO(traffic simulator) output"
 authors = ["Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
 maintainers = ["Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
@@ -8,7 +8,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.6.1"
+python = "^3.7"
 dataclasses = "*"
 nptyping = "^1.4.1"
 numpy = "*"
@@ -21,12 +21,16 @@ pandas = "*"
 tqdm = "^4.61.2"
 more_itertools = "*"
 requests = "*"
-SumoNetVis = "*"
 moviepy = "<1.0.2"
 joblib = "*"
 hvplot = "*"
-geopandas = "*"
-geoviews = "*"
+
+Shapely = { version = "^1.7.0", optional = true }
+pyproj = { version = "^3.0.0", optional = true }
+SumoNetVis = { version = "^1.6.0", optional = true }
+geopandas = { version = "^0.10.0", optional = true }
+geoviews = { version = "^1.9.1", optional = true }
+Cartopy = { version = "^0.18.0", optional = true }
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
@@ -40,3 +44,6 @@ sphinx = "*"
 [build-system]
 requires = ["setuptools", "poetry", "poetry_core>=1.0", "cython"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.extras]
+full = ["Shapely", "pyproj", "SumoNetVis", "geopandas", "geoviews", "sumo-output-parsers"]
