--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,16 +21,19 @@ pandas = "*"
 tqdm = "^4.61.2"
 more_itertools = "*"
 requests = "*"
-moviepy = "<1.0.2"
 joblib = "*"
 hvplot = "*"
+lxml = "*"
 
+moviepy = { version = "<1.0.2", optional = true }
 Shapely = { version = "^1.7.0", optional = true }
 pyproj = { version = "^3.0.0", optional = true }
 SumoNetVis = { version = "^1.6.0", optional = true }
 geopandas = { version = "^0.10.0", optional = true }
 geoviews = { version = "^1.9.1", optional = true }
 Cartopy = { version = "^0.18.0", optional = true }
+imageio-ffmpeg = { version = "*", optional = true }
+pyviz = { version = "*", optional = true }
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
@@ -46,4 +49,4 @@ requires = ["setuptools", "poetry", "poetry_core>=1.0", "cython"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.extras]
-full = ["Shapely", "pyproj", "SumoNetVis", "geopandas", "geoviews", "sumo-output-parsers"]
+full = ["Shapely", "pyproj", "SumoNetVis", "geopandas", "geoviews", "imageio-ffmpeg", "pyviz", "moviepy"]
