updated dependency information, test flags, README.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,21 +8,21 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.7,<3.9"
 dataclasses = "*"
 nptyping = "^1.4.1"
-numpy = "*"
-scikit-learn = "*"
-scipy = "*"
-Cython = "*"
-h5py = "*"
+numpy = "^1.19.2"
+scikit-learn = "^1.0"
+scipy = "^1.7.2"
+Cython = ""
+h5py = "^3.1.0"
 tabulate = "*"
-pandas = "*"
+pandas = "^1.1.3"
 tqdm = "^4.61.2"
+hvplot = "^0.7.3"
 more_itertools = "*"
 requests = "*"
 joblib = "*"
-hvplot = "*"
 lxml = "*"
 
 moviepy = { version = "<1.0.2", optional = true }
