--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sumo_output_parsers"
-version = "0.51"
+version = "0.52"
 description = "Fast and lightweight file parsers for SUMO(traffic simulator) output"
 authors = ["Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
 maintainers = ["Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
@@ -8,23 +8,23 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7,<3.9"
+python = "^3.7,<3.10"
 dataclasses = "*"
 nptyping = "^1.4.1"
 numpy = "^1.19.2"
 scikit-learn = "^1.0"
-scipy = "^1.7.2"
-Cython = ""
-h5py = "^3.1.0"
+scipy = "*"
+Cython = "*"
 tabulate = "*"
 pandas = "^1.1.3"
 tqdm = "^4.61.2"
-hvplot = "^0.7.3"
 more_itertools = "*"
 requests = "*"
 joblib = "*"
 lxml = "*"
+h5py = "^3.1.0"
 
+hvplot = {version = "^0.7.3", optional = true}
 moviepy = { version = "<1.0.2", optional = true }
 Shapely = { version = "^1.7.0", optional = true }
 pyproj = { version = "^3.0.0", optional = true }
@@ -49,4 +49,4 @@ requires = ["setuptools", "poetry", "poetry_core>=1.0", "cython"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.extras]
-full = ["Shapely", "pyproj", "SumoNetVis", "geopandas", "geoviews", "imageio-ffmpeg", "pyviz", "moviepy"]
+full = ["Shapely", "pyproj", "SumoNetVis", "geopandas", "geoviews", "imageio-ffmpeg", "pyviz", "moviepy", "hvplot"]
