--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,14 +4,17 @@ workflows:
   tests:
     jobs:
       - pypiTest:
-          name: "3.9"
+          name: "pypi 3.9"
           v: "3.9"
       - pypiTest:
-          name: "3,8"
+          name: "pypi 3,8"
           v: "3.8"
       - installTest:
-          name: "3.9"
+          name: "build 3.9"
           v: "3.9"
+      - installTest:
+          name: "build 3.8"
+          v: "3.8"
 jobs:
   pypiTest:
     parameters:
@@ -25,6 +28,9 @@ jobs:
       - image: "circleci/python:<< parameters.v >>"
     steps:
       - checkout
+      - run:
+          name: installing SUMO
+          command: apt update && apt-get install -y software-properties-common && apt-get install -y software-properties-common && add-apt-repository -y ppa:sumo/stable && apt update && apt-get install -y sumo sumo-tools sumo-doc
       - run:
           name: pypi
           command: pip install sumo-output-parsers
@@ -46,6 +52,9 @@ jobs:
       - image: "circleci/python:<< parameters.v >>"
     steps:
       - checkout
+      - run:
+          name: installing SUMO
+          command: apt update && apt-get install -y software-properties-common && apt-get install -y software-properties-common && add-apt-repository -y ppa:sumo/stable && apt update && apt-get install -y sumo sumo-tools sumo-doc
       - run:
           name: install package dependencies
           command: pip install poetry && pip install pytest pytest-resource-path
