--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - checkout
       - run:
           name: installing SUMO
-          command: apt update && apt-get install -y software-properties-common && apt-get install -y software-properties-common && add-apt-repository -y ppa:sumo/stable && apt update && apt-get install -y sumo sumo-tools sumo-doc
+          command: sudo apt update && sudo apt-get install -y software-properties-common && sudo apt-get install -y software-properties-common && sudo add-apt-repository -y ppa:sumo/stable && sudo apt update && sudo apt-get install -y sumo sumo-tools sumo-doc
       - run:
           name: pypi
           command: pip install sumo-output-parsers
@@ -54,7 +54,7 @@ jobs:
       - checkout
       - run:
           name: installing SUMO
-          command: apt update && apt-get install -y software-properties-common && apt-get install -y software-properties-common && add-apt-repository -y ppa:sumo/stable && apt update && apt-get install -y sumo sumo-tools sumo-doc
+          command: sudo apt update && sudo apt-get install -y software-properties-common && sudo apt-get install -y software-properties-common && sudo add-apt-repository -y ppa:sumo/stable && sudo apt update && sudo apt-get install -y sumo sumo-tools sumo-doc
       - run:
           name: install package dependencies
           command: pip install poetry && pip install pytest pytest-resource-path
